--- a/html/js/autocomplete.js.in
+++ b/html/js/autocomplete.js.in
@@ -2,14 +2,16 @@
 
 $(document).ready(function() {
   'use strict';
-      
+  var min_char = 3;
+  var max_items_per_cat = 10;
+  var display_services = true;
+
   window.icingaAC = {
     // This is number of miliseconds to cache partial result
     // so we don't query server again and again for same terms
-    expireMsecs: 90000,
+    expireMsecs: 60000,
 
     // internal variables
-    term: undefined,
     shorten: undefined,
     results: {}
   }
@@ -19,12 +21,18 @@ $(document).ready(function() {
     _renderMenu: function( ul, items ) {
       var that = this;
       var currentCategory = "";
+      var current_id = 0;
       $.each( items, function( index, item ) {
         if (item.category != currentCategory) {
           $('<li/>').addClass('ui-autocomplete-category').html(item.category).appendTo(ul);
           currentCategory = item.category;
+          current_id = 0;
         }
-        that._renderItemData( ul, item );
+	if (current_id < max_items_per_cat)
+          that._renderItemData( ul, item );
+	if (current_id == max_items_per_cat)
+          $('<li/>').addClass('ui-menu-item').html("...").appendTo(ul);
+	current_id++;
       });
     }
   });
@@ -39,79 +47,77 @@ $(document).ready(function() {
   });
 
   // autocomplete function
-  $("#autocomplete").catcomplete( { minLength: 3 }, {
+  $("#autocomplete").catcomplete( { minLength: min_char }, {
     // select function is used to open url for selected item
     select: function( event, ui ) { top.frames['main'].location.href = ui.item.url },
     // get results from icinga API
     source: function(request, response) {
-      window.icingaAC.term = request.term;
-      var shorten = request.term.substring(0,3);
+      var shorten = request.term.substring(0, min_char);
+      var output = [];
 
-      // shortterm is same, we use local cache
-      if ( window.icingaAC.shorten !== undefined 
-            && shorten == window.icingaAC.shorten 
-            && window.icingaAC.results[window.icingaAC.shorten].expire > (new Date).getTime() ) {
-
-        var output = [];
-        var matcher = new RegExp( $.ui.autocomplete.escapeRegex( request.term ), "i" );
-        response( $.grep( window.icingaAC.results[window.icingaAC.shorten].data, function( item ){
-          return matcher.test( item.label );
-        }) );
-
-      // shortterm is different or undefined, ask again
-      } else {
+      if (window.icingaAC.shorten === undefined || shorten != window.icingaAC.shorten || window.icingaAC.results[window.icingaAC.shorten].expire < (new Date).getTime()) {
         $.ajax({
+	  async: false,
           url: '@cgiurl@/status.cgi?livesearchdata',
           dataType: 'json',
           data: {
-            search_string: request.term // parameter for API search
+            search_string: shorten // parameter for API search
           },
           success: function(data) {
-            var output = [];
 
             // prepare hosts data
             if ( data.status.hosts ) {
-              data.status.hosts.forEach( function(item) {
+              $.each( data.status.hosts, function(index, item) {
                 output.push( {
                   category: 'Hosts:',
-                  url: '@cgiurl@/extinfo.cgi?type=1&host=' + item.host_name,
+                  url: '@cgiurl@/status.cgi?search_string=' + item.host_name,
                   label: item.host_display_name,
-                  status: 'HOST' + item.status
+		  local_match: new Array( item.host_name, item.host_display_name, item.host_alias, item.host_address, item.host_address6 ),
+                  status: item.status
+                });
+              });
+            }
+
+            // prepare services data
+            if ( data.status.services && display_services) {
+              $.each( data.status.services, function(index, item) {
+                output.push( {
+                  category: 'Services ' + item.host_name + ':',
+                  url: '@cgiurl@/extinfo.cgi?type=2&host=' + item.host_name + '&service=' + item.service_description,
+                  label: item.service_display_name,
+                  local_match: new Array( item.service_description, item.service_display_name,
+                                          item.host_name + ' ' + item.service_description,
+                                          item.host_name + ' ' + item.service_display_name,
+                                          item.host_display_name + ' ' + item.service_description,
+                                          item.host_display_name + ' ' + item.service_display_name ),
+                  value: item.host_name + ' ' + item.service_description,
+                  status: item.status
                 });
               });
             }
 
             // prepare host groups data
             if ( data.status.hostgroups ) {
-              data.status.hostgroups.forEach( function(item) {
+              $.each( data.status.hostgroups, function(index, item) {
                 output.push( {
                   category: 'Hostgroups:',
-                  url: '@cgiurl@/status.cgi?hostgroup=' + item.hostgroup_name,
-                  label: item.hostgroup_alias
+                  url: '@cgiurl@/status.cgi?style=overview&hostgroup=' + item.hostgroup_name,
+                  local_match: new Array( item.hostgroup_name, item.hostgroup_alias ),
+                  label: item.hostgroup_alias,
+                  status: "group"
                 });
               });
             }
 
             // prepare service groups data
             if ( data.status.servicegroups ) {
-              data.status.servicegroups.forEach( function(item) {
+              $.each( data.status.servicegroups, function(index, item) {
                 output.push( {
                   category: 'Servicegroups:',
-                  url: '@cgiurl@/status.cgi?servicegroup=' + item.servicegroup_name,
-                  label: item.servicegroup_alias
-                });
-              });
-            }
-            
-            // prepare services data
-            if ( data.status.services ) {
-              data.status.services.forEach( function(item) {
-                output.push( {
-                  category: 'Host ' + item.host_name + ':',
-                  url: '@cgiurl@/extinfo.cgi?type=2&host=' + item.host_name + '&service=' + item.service_description,
-                  label: item.service_display_name,
-                  value: item.host_name + '*' + item.service_description,
-                  status: item.status
+                  url: '@cgiurl@/status.cgi?style=overview&servicegroup=' + item.servicegroup_name,
+                  local_match: new Array( item.servicegroup_name, item.servicegroup_alias ),
+                  label: item.servicegroup_alias,
+                  status: "group"
                 });
               });
             }
@@ -121,10 +127,23 @@ $(document).ready(function() {
               expire: (new Date).getTime() + window.icingaAC.expireMsecs,
               data: output
             }
-            response(output);
           }
         })
       }
+
+      var matcher = new RegExp( request.term.replace("*", ".*"), "i" );
+      response( $.grep( window.icingaAC.results[window.icingaAC.shorten].data, function( item ){
+        var match_result = false;
+        $.each( item.local_match, function( index, match_item ) {
+          if (match_item !== undefined && matcher.test( match_item )) {
+            match_result = true;
+            return;
+          }
+        });
+
+        return match_result;
+      }) );
+
     }
   })
 });
