core: dump host/service initial states on event loop initialization again
fixes #3838

Signed-off-by: Michael Friedrich <Michael.Friedrich@netways.de>

--- a/sample-config/updates/icinga.cfg_added_1.9_to_1.10.cfg
+++ b/sample-config/updates/icinga.cfg_added_1.9_to_1.10.cfg
@@ -15,5 +15,16 @@
 
 illegal_object_name_chars=`~!$%^&*|'"<>?,()=:
 
+# default value was changed to 0
+
+# DUMP RETAINED HOST SERVICE STATES TO NEB
+# This setting determines wether or not Icinga will dump host
+# and service states based on the values saved in the retention
+# file to the neb modules. It will already do that on event loop
+# initialization.
+# Changed in Icinga 1.10 to disabled - re-enable if you require it.
+
+dump_retained_host_service_states_to_neb=0
+
 
 
