remove enable_sla.
refs #4363

--- a/module/idoutils/config/updates/ido2db.cfg_removed_1.9_to_1.10.cfg
+++ b/module/idoutils/config/updates/ido2db.cfg_removed_1.9_to_1.10.cfg
@@ -36,4 +36,14 @@ clean_realtime_tables_on_core_startup=1
 
 clean_config_tables_on_core_startup=1
 
+# removed
+
+# ENABLE SLA - DEPRECATED!
+# This setting enables collection of SLA data in the slahistory table
+# Values: 0 = disabled, 1 = enabled
+#
+# WARNING: This setting will be deprecated in 1.9 and not developed
+# anymore, as it has never been used by any Icinga application.
+
+enable_sla=0
 
