--- a/base/Makefile.in
+++ b/base/Makefile.in
@@ -76,8 +76,6 @@ XODC=@XODC@
 XODH=@XODH@
 XPDC=@XPDC@
 XPDH=@XPDH@
-XDDC=@XDDC@
-XDDH=@XDDH@
 
 # Extra base code
 BASEEXTRALIBS=@BASEEXTRALIBS@
@@ -122,16 +120,9 @@ PDATALIBS=perfdata-base.o xperfdata-base.o
 PDATAHDRS=
 PDATADEPS=$(PDATALIBS)
 
-# Downtime data
-#DDATALIBS=$(SRC_COMMON)/downtime.c $(SRC_XDATA)/$(XDDC)
-#DDATAHDRS=$(SRC_INCLUDE)/downtime.h $(SRC_XDATA)/$(XDDH)
-DDATALIBS=downtime-base.o xdowntime-base.o
-DDATAHDRS=
-DDATADEPS=$(DDATALIBS)
 
-
-OBJS=$(BROKER_O) $(SRC_COMMON)/shared.o checks.o config.o commands.o events.o flapping.o logging.o macros-base.o netutils.o notifications.o sehandlers.o skiplist.o utils.o $(RDATALIBS) $(CDATALIBS) $(ODATALIBS) $(SDATALIBS) $(PDATALIBS) $(DDATALIBS) $(BASEEXTRALIBS) $(SNPRINTF_O) $(PERLXSI_O)
-OBJDEPS=$(ODATADEPS) $(ODATADEPS) $(RDATADEPS) $(CDATADEPS) $(SDATADEPS) $(PDATADEPS) $(DDATADEPS) $(BROKER_H)
+OBJS=$(BROKER_O) $(SRC_COMMON)/shared.o $(SRC_COMMON)/downtime.o checks.o config.o commands.o events.o flapping.o logging.o macros-base.o netutils.o notifications.o sehandlers.o skiplist.o utils.o $(RDATALIBS) $(CDATALIBS) $(ODATALIBS) $(SDATALIBS) $(PDATALIBS) $(BASEEXTRALIBS) $(SNPRINTF_O) $(PERLXSI_O)
+OBJDEPS=$(ODATADEPS) $(ODATADEPS) $(RDATADEPS) $(CDATADEPS) $(SDATADEPS) $(PDATADEPS) $(BROKER_H)
 
 all: icinga icingastats
 
@@ -164,9 +155,6 @@ xcomments-base.o: $(SRC_XDATA)/$(XCDC) $(SRC_XDATA)/$(XCDH)
 
 downtime-base.o: $(SRC_COMMON)/downtime.c $(SRC_INCLUDE)/downtime.h
 	$(CC) $(CFLAGS) -c -o $@ $(SRC_COMMON)/downtime.c
-
-xdowntime-base.o: $(SRC_XDATA)/$(XDDC) $(SRC_XDATA)/$(XDDH)
-	$(CC) $(CFLAGS) -c -o $@ $(SRC_XDATA)/$(XDDC)
 
 perfdata-base.o: perfdata.c $(SRC_INCLUDE)/perfdata.h
 	$(CC) $(CFLAGS) -c -o $@ perfdata.c
