--- a/t-tap/Makefile.in
+++ b/t-tap/Makefile.in
@@ -26,8 +26,8 @@ TP_OBJS += $(SRC_BASE)/objects-base.o $(SRC_BASE)/xobjects-base.o
 TP_OBJS += $(SRC_BASE)/skiplist.o ../common/shared.o
 
 CFG_OBJS = $(TP_OBJS)
-CFG_OBJS += $(SRC_BASE)/comments-base.o $(SRC_BASE)/xcomments-base.o
-CFG_OBJS += $(SRC_BASE)/downtime-base.o $(SRC_BASE)/xdowntime-base.o
+CFG_OBJS += $(SRC_BASE)/comments-base.o
+CFG_OBJS += $(SRC_BASE)/downtime-base.o
 CFG_OBJS += $(SRC_BASE)/retention-base.o $(SRC_BASE)/xretention-base.o
 
 
@@ -109,7 +109,7 @@ test_checks: test_checks.o $(SRC_BASE)/checks.o $(TAPOBJ)
 test_commands: test_commands.o $(SRC_COMMON)/shared.o $(TAPOBJ)
 	$(CC) $(CFLAGS) -o $@ $^
 
-test_downtime: test_downtime.o $(SRC_BASE)/downtime-base.o $(SRC_BASE)/xdowntime-base.o $(TAPOBJ)
+test_downtime: test_downtime.o $(SRC_BASE)/downtime-base.o $(TAPOBJ)
 	$(CC) $(CFLAGS) -o $@ $^
 
 test_freshness: test_freshness.o $(SRC_BASE)/freshness.o $(TAPOBJ)
