--- a/sample-config/updates/cgi.cfg_added_1.10_to_1.11.cfg
+++ b/sample-config/updates/cgi.cfg_added_1.10_to_1.11.cfg
@@ -15,3 +15,12 @@
 # The default is 0 (protection is on).
 
 disable_cmd_cgi_csrf_protection=0
+
+
+
+# READ GZIP LOGS
+# This option enables reading of gzipped log files. As this can
+# have a huge performance impact in big environments, this
+# option is disabled by default.
+
+read_gzip_logs=0
