Initscript: Handle binary return codes gracefully.
This applies mainly for ido2db startup checks, and should return 1
instead of the default 0 exit code.

Refs #5412

--- a/daemon-init.in
+++ b/daemon-init.in
@@ -161,9 +161,10 @@ start(){
 	touch $IcingaRunFile
 	chown $IcingaUser:$IcingaGroup $IcingaRunFile
 	$IcingaBin -d $IcingaCfgFile
+	bin_exit=$?
 	if [ -d $IcingaLockDir ]; then touch $IcingaLockDir/$IcingaLockFile; fi
 	echo "Starting icinga done."
-	exit 0
+	exit $bin_exit
 
 }
 
