--- a/t-tap/Makefile.in
+++ b/t-tap/Makefile.in
@@ -101,6 +101,10 @@ all: $(TESTS)
 
 ########## TESTS ##########
 
+perl_ext_stub:
+	perl -MExtUtils::Embed -e xsinit -- -o xsinit.c -std
+	$(CC) -c xsinit.c `perl -MExtUtils::Embed -e ccopts`
+
 test_logging: test_logging.o $(SRC_BASE)/logging.o $(TAPOBJ)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
@@ -119,11 +123,11 @@ test_downtime: test_downtime.o $(SRC_BASE)/downtime-base.o $(SRC_BASE)/xdowntime
 test_freshness: test_freshness.o $(SRC_BASE)/freshness.o $(TAPOBJ)
 	$(CC) $(CFLAGS) -o $@ $^
 
-test_icinga_config: test_icinga_config.o $(CFG_OBJS) $(TAPOBJ)
-	$(CC) $(CFLAGS) -o $@ $^ $(BROKER_LDFLAGS) $(LDFLAGS) $(MATHLIBS) $(SOCKETLIBS) $(THREADLIBS) $(BROKERLIBS) $(LIBS)
+test_icinga_config: xsinit.o test_icinga_config.o $(CFG_OBJS) $(TAPOBJ)
+	$(CC) $(CFLAGS) -o $@ $^ $(BROKER_LDFLAGS) $(LDFLAGS) $(MATHLIBS) $(SOCKETLIBS) $(THREADLIBS) $(BROKERLIBS) $(LIBS) $(PERLLIBS)
 
-test_timeperiods: test_timeperiods.o $(TP_OBJS) $(TAPOBJ)
-	$(CC) $(CFLAGS) -o $@ $^ $(BROKER_LDFLAGS) $(LDFLAGS) $(MATHLIBS) $(SOCKETLIBS) $(THREADLIBS) $(BROKERLIBS) $(LIBS)
+test_timeperiods: xsinit.o test_timeperiods.o $(TP_OBJS) $(TAPOBJ)
+	$(CC) $(CFLAGS) -o $@ $^ $(BROKER_LDFLAGS) $(LDFLAGS) $(MATHLIBS) $(SOCKETLIBS) $(THREADLIBS) $(BROKERLIBS) $(LIBS) $(PERLLIBS)
 
 test_xsddefault: test_xsddefault.o $(XSD_OBJS) $(TAPOBJ)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
@@ -131,7 +135,7 @@ test_xsddefault: test_xsddefault.o $(XSD_OBJS) $(TAPOBJ)
 test_strtoul: test_strtoul.c
 	$(CC) $(CFLAGS) -o $@ test_strtoul.c $(TAPOBJ)
 
-test: $(TESTS)
+test: perl_ext_stub $(TESTS)
 	HARNESS_PERL=./test_each.t perl -MTest::Harness -e '$$Test::Harness::switches=""; runtests(map { "./$$_" } @ARGV)' $(TESTS)
 
 clean:
