- removed mixed indentation - modified status check to be LSB conform - changed structure of status check

--- a/rc.ido2db.in
+++ b/rc.ido2db.in
@@ -42,7 +42,6 @@
 #
 #
 
-servicename=@ido2db_name@
 prefix=@prefix@
 exec_prefix=${prefix}
 Ido2dbBin=@bindir@/@ido2db_name@
@@ -74,7 +73,7 @@ elif [ -f /etc/init.d/functions ]; then
 fi
 
 
-# Check that ido2db exists.
+# Check that ido2db binary exists.
 if [ ! -f $Ido2dbBin ]; then
     echo "Executable file $Ido2dbBin not found.  Exiting."
     exit 1
@@ -83,6 +82,12 @@ fi
 # Check that ido2db.cfg exists.
 if [ ! -f $Ido2dbCfgFile ]; then
     echo "Configuration file $Ido2dbCfgFile not found.  Exiting."
+    exit 1
+fi
+
+# Check that
+if [ ! -d $Ido2dbLockDir ]; then
+    echo "Lockfile dir $Ido2dbLockDir not found.  Exiting."
     exit 1
 fi
 
@@ -95,9 +100,9 @@ fi
 # return 4 if the state is unknown
 status_ido2db ()
 {
-    if pid_ido2db && status_ido2db_process; then
+    if pid_ido2db && process_ido2db; then
         return 0
-    elif ! pid_ido2db && ! status_ido2db_process; then
+    elif ! pid_ido2db && ! process_ido2db; then
         return 3
     elif pid_ido2db; then
         return 1
@@ -106,8 +111,23 @@ status_ido2db ()
     fi
 }
 
+# print human readable output of service status
+printstatus_ido2db()
+{
+    status_ido2db
+    STATUS=$?
+    if test $STATUS -eq 0; then
+        echo "Ido2db (pid $Ido2dbPID) is running..."
+    elif test $STATUS -eq 1; then
+        echo "Ido2db is not running but subsystem locked"
+    else
+        echo "Ido2db is not running"
+    fi
+    exit $STATUS
+}
+
 # check if process is running
-status_ido2db_process ()
+process_ido2db ()
 {
     if ps -p $Ido2dbPID > /dev/null 2>&1; then
         return 0
@@ -127,33 +147,25 @@ pid_ido2db ()
     fi
 }
 
-# print human readable output of service status
-printstatus_ido2db()
-{
-    status_ido2db $1 $2
-    STATUS=$?
-    if [[ $STATUS -eq 0 ]]; then
-        echo "$servicename (pid $Ido2dbPID) is running..."
-    elif [[ $STATUS -eq 1 ]]; then
-        echo "$servicename is not running but subsystem locked"
-    else
-        echo "$servicename is not running"
-    fi
-    exit $STATUS
-}
-
+# send TERM signal if process is running
 killproc_ido2db ()
 {
-	if status_ido2db $1 $2; then
+	if status_ido2db; then
 		kill $Ido2dbPID
 	fi
 
 }
 
+# send KILL signal
 killproc9_ido2db ()
 {
     kill -9 $Ido2dbPID
 
+}
+
+remove_run_files ()
+{
+    rm -f $Ido2dbStatusFile $Ido2dbRunFile $Ido2dbLockDir/$Ido2dbLockFile $Ido2dbCommandFile
 }
 
 ## MAIN ##
@@ -162,33 +174,35 @@ case "$1" in
 
 	start)
 		#check if ido2db is already running
-		$0 status > /dev/null
-		if [ $? -eq 0 ]; then
-			pid_ido2db
-			# check if pid can be found running
-			if status_ido2db > /dev/null; then
-				echo "$servicename is already running. PID: $Ido2dbPID"
-				exit 0
-			else
-				echo "$servicename PID $Ido2dbPID not running. Removing lockfile."
-				rm -f $Ido2dbStatusFile $Ido2dbRunFile $Ido2dbLockDir/$Ido2dbLockFile $Ido2dbCommandFile
-			fi
+		status_ido2db
+		STATUS=$?
+		if test $STATUS -eq 0; then
+            echo "Ido2db is already running. PID: $Ido2dbPID"
+			exit 0
+		elif test $STATUS -eq 1; then
+			echo "Ido2db PID $Ido2dbPID not running. Removing lockfile."
+			remove_run_files
 		fi
-		printf "Starting $servicename:"
+
+		printf "Starting Ido2db:"
 		# remove leftover sockfile, from a system crash
 		rm -f $Ido2dbSockFile
+
+        # precreate runfile and handover it to ido2db runuser and group
 		touch $Ido2dbRunFile
-		chown $Ido2dbUser:$Ido2dbGroup $Ido2dbRunFile
+        chown $Ido2dbUser:$Ido2dbGroup $Ido2dbRunFile
+
+        # start ido2db daemon
 		$Ido2dbBin -c $Ido2dbCfgFile
-		if [ -d $Ido2dbLockDir ]; then touch $Ido2dbLockDir/$Ido2dbLockFile; fi
+		touch $Ido2dbLockDir/$Ido2dbLockFile
 		echo " done."
 		exit 0
 		;;
 
 	stop)
-		printf "Stopping $servicename: "
+		printf "Stopping Ido2db: "
 
-		pid_ido2db
+        pid_ido2db
 		killproc_ido2db
 
  		# now we have to wait for ido2db to exit and remove its
@@ -197,27 +211,27 @@ case "$1" in
  		# new Ido2dbRunFile, allowing multiple ido2db daemons
  		# to (sooner or later) run - John Sellens
  		for i in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15; do
- 		    if status_ido2db > /dev/null; then
+ 		    if status_ido2db; then
  			printf '.'
  			sleep 1
  		    else
  			break
  		    fi
  		done
- 		if status_ido2db > /dev/null; then
+ 		if status_ido2db; then
  		    echo ''
- 		    echo "Warning - $servicename did not exit in a timely manner. Sending kill -9"
+ 		    echo "Warning - Ido2db did not exit in a timely manner. Sending kill -9"
 		    kill9proc_ido2db
  		else
+ 		    remove_run_files
  		    echo "done."
-		    rm -f $Ido2dbStatusFile $Ido2dbRunFile $Ido2dbLockDir/$Ido2dbLockFile $Ido2dbCommandFile
  		fi
 
 		;;
 
     status)
-		printstatus_ido2db ido2db
-                ;;
+		printstatus_ido2db
+        ;;
 
 	restart)
 		$0 stop
@@ -225,7 +239,7 @@ case "$1" in
 		;;
 
 	*)
-		echo "Usage: $servicename {start|stop|restart|status}"
+		echo "Usage: Ido2db {start|stop|restart|status}"
 		exit 1
 		;;
 
