--- a/rc.ido2db.in
+++ b/rc.ido2db.in
@@ -150,10 +150,7 @@ pid_ido2db ()
 # send TERM signal if process is running
 killproc_ido2db ()
 {
-	if status_ido2db; then
-		kill $Ido2dbPID
-	fi
-
+	kill $Ido2dbPID
 }
 
 # send KILL signal
@@ -200,33 +197,35 @@ case "$1" in
 		;;
 
 	stop)
-		printf "Stopping Ido2db: "
+	    if status_ido2db; then
+	        printf "Stopping Ido2db: "
+        	killproc_ido2db
 
-        pid_ido2db
-		killproc_ido2db
-
- 		# now we have to wait for ido2db to exit and remove its
- 		# own Ido2dbRunFile, otherwise a following "start" could
- 		# happen, and then the exiting ido2db will remove the
- 		# new Ido2dbRunFile, allowing multiple ido2db daemons
- 		# to (sooner or later) run - John Sellens
- 		for i in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15; do
- 		    if status_ido2db; then
- 			printf '.'
- 			sleep 1
- 		    else
- 			break
- 		    fi
- 		done
- 		if status_ido2db; then
- 		    echo ''
- 		    echo "Warning - Ido2db did not exit in a timely manner. Sending kill -9"
-		    kill9proc_ido2db
- 		else
- 		    remove_run_files
- 		    echo "done."
- 		fi
-
+         	# now we have to wait for ido2db to exit and remove its
+         	# own Ido2dbRunFile, otherwise a following "start" could
+         	# happen, and then the exiting ido2db will remove the
+         	# new Ido2dbRunFile, allowing multiple ido2db daemons
+         	# to (sooner or later) run - John Sellens
+         	for i in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15; do
+         	    if status_ido2db; then
+         		printf '.'
+         		sleep 1
+         	    else
+         		break
+         	    fi
+         	done
+         	if status_ido2db; then
+         	    echo ''
+         	    echo "Warning - Ido2db did not exit in a timely manner. Sending kill -9"
+        	    kill9proc_ido2db
+         	else
+         	    remove_run_files
+         	    echo "done."
+         	fi
+	    else
+	        echo "Ido2db is already stopped!"
+	        exit 0
+	    fi
 		;;
 
     status)
