--- a/daemon-init.in
+++ b/daemon-init.in
@@ -56,71 +56,84 @@ if [ ! -f $IcingaCfgFile ]; then
     exit 1
 fi
 
+# Check that
+if [ ! -d $IcingaLockDir ]; then
+    echo "Lockfile dir $IcingaLockDir not found.  Exiting."
+    exit 1
+fi
 
 ## helper functions ##
-check_pid_file_exists ()
-{
-        if test ! -f $IcingaRunFile; then
-                return 1;
-        fi
 
-        return 0
-}
-
+# checks status if icinga daemon
+# return 0 if running
+# return 1 if dead but pidfile exists
+# return 3 if daemon is not running
+# return 4 if the state is unknown
 status_icinga ()
 {
-
-	if ps -p $IcingaPID > /dev/null 2>&1; then
-	        return 0
-	else
-		return 1
-	fi
-
-	return 1
+    if pid_icinga && process_icinga; then
+        return 0
+    elif ! pid_icinga && ! process_icinga; then
+        return 3
+    elif pid_icinga; then
+        return 1
+    else
+        return 4
+    fi
 }
 
-
-checkstatus_icinga()
+# print human readable output of service status
+printstatus_icinga()
 {
-        if check_pid_file_exists > /dev/null; then
-                pid_icinga
-                if status_icinga $1 $2; then
-                        echo "icinga (pid $IcingaPID) is running..."
-                        exit 0
-                else
-                        echo "icinga is not running. removing $IcingaRunFile"
-                        # pid file exists, but daemon is dead
-                        rm -f $IcingaRunFile
-                        exit 1
-                fi
-        else
-                # daemon not running
-                echo "icinga is not running"
-                exit 3
-        fi
+    status_icinga
+    STATUS=$?
+    if test $STATUS -eq 0; then
+        echo "Icinga (pid $IcingaPID) is running..."
+    elif test $STATUS -eq 1; then
+        echo "Icinga is not running but subsystem locked"
+    else
+        echo "Icinga is not running"
+    fi
+    exit $STATUS
 }
 
-killproc_icinga ()
+# check if process is running
+process_icinga ()
 {
-	if kill -0  $IcingaPID  >/dev/null 2>&1; then
-		kill $2 $IcingaPID
-	fi
+    if ps -p $IcingaPID > /dev/null 2>&1; then
+        return 0
+    else
+        return 1
+    fi
 }
 
-kill9proc_icinga()
-{
-	kill -9 $IcingaPID
-}
-
+# check pidfile for existence
 pid_icinga ()
 {
+    if test -f $IcingaRunFile; then
+        IcingaPID=`head -n 1 $IcingaRunFile`
+        return 0
+    else
+        return 1
+    fi
+}
 
-	if test ! -f $IcingaRunFile; then
-		echo "Icinga not running. No lock file found in $IcingaRunFile"
-		exit 1
-	fi
+# send TERM signal if process is running
+killproc_icinga ()
+{
+	kill $IcingaPID
+}
 
-	IcingaPID=`head -n 1 $IcingaRunFile`
+# send KILL signal
+killproc9_icinga ()
+{
+    kill -9 $IcingaPID
+
+}
+
+remove_run_files ()
+{
+    rm -f $IcingaStatusFile $IcingaRunFile $IcingaLockDir/$IcingaLockFile $IcingaCommandFile
 }
 
 chk_config ()
@@ -143,28 +156,28 @@ chk_config ()
 
 start(){
 	# Check if icinga is already running
-	$0 status > /dev/null
-	if [ $? -eq 0 ]; then
-		pid_icinga
-		# check if pid can be found running
-		if status_icinga > /dev/null; then
-			echo "Icinga is already running. PID: $IcingaPID"
-				exit 0
-			else
-				echo "Icinga PID $IcingaPID not running. Removing lockfile."
-				rm -f $IcingaRunFile $IcingaLockDir/$IcingaLockFile
-		fi
+	status_icinga
+	STATUS=$?
+	if test $STATUS -eq 0; then
+        echo "Icinga is already running. PID: $IcingaPID"
+		exit 0
+	elif test $STATUS -eq 1; then
+		echo "Icinga with PID $IcingaPID not running. Removing lockfile."
+		remove_run_files
 	fi
 
 	printf "Starting icinga: "
 	rm -f $IcingaCommandFile
+
+	# precreate runfile and handover it to icinga runuser and group
 	touch $IcingaRunFile
 	chown $IcingaUser:$IcingaGroup $IcingaRunFile
+
+	# start icinga daemon
 	$IcingaBin -d $IcingaCfgFile
-	if [ -d $IcingaLockDir ]; then touch $IcingaLockDir/$IcingaLockFile; fi
+	touch $IcingaLockDir/$IcingaLockFile
 	echo "Starting icinga done."
 	exit 0
-
 }
 
 
